--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">NewsApp</string>
     <string name="no_internet_available">no internet at all...</string>
+    <string name="retry">RETRY\n</string>
+    <string name="please_wait">PLEASE WAIT...</string>
 </resources>
